スマホで見てもあるていど見られるものにした

--- a/Web/SwingDataViewer/Views/Home/Graph.cshtml
+++ b/Web/SwingDataViewer/Views/Home/Graph.cshtml
@@ -43,10 +43,10 @@
                 </div>
             </div>
         </div>
-        <div id="dateFilter">
+        <div class="filterBox" id="dateFilter">
 
         </div>
-        <div style="margin-top: 10px;">
+        <div class="filterBox">
             @foreach (var kv in clubTypeList)
             {
                 <div>
@@ -68,7 +68,7 @@
                 </div>
             }
         </div>
-        <div style="margin-top: 10px;">
+        <div class="filterBox" style="margin-top: 10px;">
             <span>Y軸</span>
             <select name="y">
                 <option value="headspeed">ヘッドスピード</option>
