--- a/Web/SwingDataViewer/Views/Home/Statistics.cshtml
+++ b/Web/SwingDataViewer/Views/Home/Statistics.cshtml
@@ -39,3 +39,11 @@
         </table>
     }
 </section>
+
+@section Styles{
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.1/css/tempusdominus-bootstrap-4.min.css" />
+    <environment include="Development">
+        <link rel="stylesheet" href="~/css/stat.css" />
+    </environment>
+}
