--- a/Web/SwingDataViewer/wwwroot/css/site.css
+++ b/Web/SwingDataViewer/wwwroot/css/site.css
@@ -169,7 +169,7 @@ section.basic {
 
 
 section.ranking {
-    margin: 40px 0;
+    margin: 20px 0;
     background-color: #cce0b0;
     filter: drop-shadow(0 0 2px rgba(204,224,176,1));
 }
@@ -178,7 +178,7 @@ section.ranking {
     text-align: center;
     font-size: 1.5rem;
     font-weight: 700;
-    padding: 30px;
+    padding: 30px 30px 0 30px;
 }
 
 .ranking h2 {
@@ -188,14 +188,13 @@ section.ranking {
 }
 
 .ranking .onepoint {
-    margin: 30px;
+    margin: 0;
 }
 
     .ranking .onepoint p {
         margin: 0 50px;
         text-align: center;
     }
-
 
 .ranking .card-deck {
     margin: 0 40px;
@@ -230,14 +229,21 @@ section.ranking {
 
         .ranking .card .card-body table {
             margin: 0;
+            border-collapse: collapse;
         }
 
-            .ranking .card .card-body table th {
-                width: 50px;
+            .ranking .card .card-body table th,
+            .ranking .card .card-body table td {
+                padding: 0.5em 0.5em 0.2em;
+                border: none;
             }
 
-            .ranking .card .card-body table td, .ranking .card .card-body table th {
-                border: hidden;
+            .ranking .card .card-body table th {
+                width: 40px;
+            }
+
+            .ranking .card .card-body table tr {
+                border-bottom: 1px solid lightgray;
             }
 
             .ranking .card .card-body table .multi {
@@ -252,6 +258,9 @@ section.ranking {
                 width: 150px;
             }
 
+.ranking .unknown {
+    color: lightgray;
+}
 
 .mainContents .buttons {
     display: flex;
@@ -588,8 +597,12 @@ section.ranking {
         }
 
         .ranking .card .card-body table td, .ranking .card .card-body table th {
-            border: hidden;
+            border: none;
             padding: 0.5em;
+        }
+
+        .ranking .card .card-body table tr {
+            border-bottom: 1px solid lightgray;
         }
 
         .ranking .card .card-body table .multi {
